--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nutrición Integral" />
+    <meta property="og:description" content="Consultorio Nutrición Integral, tu cambio a un solo click!" />
+    <meta property="og:image" content="https://consultorio-nutricion-integral-6ifm4sbx1.vercel.app/assets/logo-BU6Pbo9o.png" />
+    <meta property="og:site_name" content="Nutrición Integral" />
+
     <title>Nutrición Integral</title>
   </head>
   <body class="h-full overflow-x-hidden">
